[package]
name = "world-transmuter-engine"
version = "0.8.0"
edition = "2021"
license = "LGPL-3.0-only"
readme = "README.md"
description = "The engine part of the port of DataConverter to Rust"
homepage = "https://github.com/Earthcomputer/world-transmuter-engine"
repository = "https://github.com/Earthcomputer/world-transmuter-engine"

[dependencies]

java_string = "0.1"
valence_nbt = { version = "0.8", features = ["java_string"] }
log = "0.4.21"

[dev-dependencies]

valence_nbt = { version = "0.8", features = ["java_string", "snbt"] }
